# real-estate-molit-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py  loader.py
dashboard/assets/: seoul_sig.geojson
scripts/: build_seoul_geo.py  fetch_bulk.py  fetch_molit.py  make_sample.py
src/hedonic/: molit_api.py  weights.py
tests/: conftest.py  test_dashboard_loader.py  test_molit_api.py  test_weights.py
