[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-hedonic"
version = "0.1.0"
description = "공간자기상관을 보정한 한국 아파트 헤도닉 가격모형"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dongsoo Jung", email = "jds068888@gmail.com" }]
license = { text = "MIT" }

# 런타임 의존성은 requirements.txt로 관리한다.
# editable 설치(`pip install -e .`)는 src/hedonic 패키지 경로 등록 용도.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

# ----------------------------------------------------------------------
# pytest: src 레이아웃을 import 경로에 추가, tests/만 수집
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"

# ----------------------------------------------------------------------
# 코드 스타일 (CONTRIBUTING: black + ruff)
# ----------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
